--- a/app/res/layout/activity_startseite.xml
+++ b/app/res/layout/activity_startseite.xml
@@ -8,9 +8,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Startseite" >
 
-    <TextView
+    <Button
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/btn_tagebuch" 
+        android:onClick="callTagebuch"/>
 
 </RelativeLayout>
