--- a/app/res/layout/activity_diary.xml
+++ b/app/res/layout/activity_diary.xml
@@ -2,145 +2,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".DiaryActivity" >
 
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-	            <ImageView
-			        android:id="@+id/imageView1"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_alignRight="@+id/tableLayout1"
-			        android:layout_below="@+id/tableLayout1"
-			        android:layout_marginRight="94dp"
-			        android:src="@drawable/ic_launcher" />
+        <TableLayout android:layout_width="35dp" >
 
-	            <LinearLayout
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical" >
-                      
-                      <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Titel 1"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-                      <TextView
-                          android:id="@+id/textView2"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:text="Datum"
-                          android:textAppearance="?android:attr/textAppearanceMedium" />
-                  </LinearLayout>
+            <!-- Wochentag -->
 
-        </TableRow>
+            <TableRow>
 
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-	              <ImageView
-			        android:id="@+id/imageView1"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_alignRight="@+id/tableLayout1"
-			        android:layout_below="@+id/tableLayout1"
-			        android:layout_marginRight="94dp"
-			        android:src="@drawable/ic_launcher" />
-	              
-	              <LinearLayout
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical" >
-                      
-                      <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Titel 2"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-                      <TextView
-                          android:id="@+id/textView2"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:text="Datum"
-                          android:textAppearance="?android:attr/textAppearanceMedium" />
-                  </LinearLayout>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-	              <ImageView
-                    android:id="@+id/imageView1"
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignRight="@+id/tableLayout1"
-                    android:layout_below="@+id/tableLayout1"
-                    android:layout_marginRight="94dp"
-                    android:src="@drawable/ic_launcher" />
-	              
-	              <LinearLayout
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical" >
-                      
-                      <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Titel 3"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
-                      <TextView
-                          android:id="@+id/textView2"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:text="Datum"
-                          android:textAppearance="?android:attr/textAppearanceMedium" />
-                  </LinearLayout>
-        </TableRow>
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="MO"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#505050"
+                    android:textSize="12sp" />
+            </TableRow>
 
-        <TableRow
-            android:id="@+id/tableRow4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-	              <ImageView
-                    android:id="@+id/imageView1"
+            <!-- Datum -->
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="18"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <!-- Uhrzeit -->
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="17:30"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#505050"
+                    android:textSize="12sp"
+                     />
+            </TableRow>
+        </TableLayout>
+
+        <TableLayout android:layout_width="260dp" >
+
+            <!-- Titel -->
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:text="Test"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignRight="@+id/tableLayout1"
-                    android:layout_below="@+id/tableLayout1"
-                    android:layout_marginRight="94dp"
-                    android:src="@drawable/ic_launcher" />
+                    android:layout_height="fill_parent"
+                    android:maxLines="3"
+                    android:lines="3"
+                    android:minHeight="40dp"
+                    android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, Lorem ipsum dolor sit amet, consetetur sadipscing elitr,Lorem ipsum dolor sit amet, consetetur sadipsci"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="12sp"
+                     />
 
-	              <LinearLayout
-	                  android:layout_width="wrap_content"
-	                  android:layout_height="wrap_content"
-	                  android:orientation="vertical" >
-	                  
-	                  <TextView
-	                    android:id="@+id/textView1"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:text="Titel 4"
-	                    android:textAppearance="?android:attr/textAppearanceMedium" />
-	                  <TextView
-	                      android:id="@+id/textView2"
-	                      android:layout_width="wrap_content"
-	                      android:layout_height="wrap_content"
-	                      android:text="Datum"
-	                      android:textAppearance="?android:attr/textAppearanceMedium" />
-	              </LinearLayout>
-
-        </TableRow>
+            </TableRow>
+        </TableLayout>
+    </TableRow>
 
 </TableLayout>
