Template for entries with picture(s) Header for each month

--- a/app/res/layout/activity_diary.xml
+++ b/app/res/layout/activity_diary.xml
@@ -8,8 +8,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DiaryActivity" >
+    tools:context=".DiaryActivity" 
+    >
 
+    <!-- Table header for each month
+    	TODO / Nice to have: Make it fixed to the top -->
+    	
+    <TableLayout>
+        <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:text="Dezember 2013"
+                    android:textColor="#505050"
+                    android:paddingBottom="10dp"
+                     />
+        </TableRow>
+    </TableLayout>
+    
+    
     <TableRow
         android:id="@+id/diaryEntryWithoutPicture"
         android:layout_width="wrap_content"
@@ -27,7 +44,8 @@
                     android:text="MO"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="#505050"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                     />
             </TableRow>
 
             <!-- Datum -->
@@ -61,14 +79,15 @@
 
         <TableLayout
             android:layout_width="260dp"
-            android:paddingLeft="2dp" >
+            android:paddingLeft="2dp"
+            android:layout_span="2" >
 
             <!-- Titel -->
 
             <TableRow>
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="260dp"
                     android:layout_height="fill_parent"
                     android:text="Ein schöner Tag ohne Bild und ein viel viel viel zu langer Titel"
                     android:textAppearance="?android:attr/textAppearanceSmall"
@@ -77,14 +96,15 @@
                     android:ellipsize="end"
                     android:lines="1"
                     android:maxLines="1"
-                    android:singleLine="true"/>
+                    android:singleLine="true" 
+                    />
             </TableRow>
 
             <!-- Text preview -->
             <TableRow>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="260dp"
                     android:layout_height="fill_parent"
                     android:ellipsize="end"
                     android:lines="3"
@@ -93,7 +113,8 @@
                     android:singleLine="false"
                     android:text="Lorem ipsum dolor sit at, consetetur sadipscing elitr, Lorem ipsum dolor sit amet, consetetur sadipscing elitr,Lorem ipsum dolor sit amet, consetetur sadipsci"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    />
             </TableRow>
         </TableLayout>
     </TableRow>
@@ -171,26 +192,22 @@
 
         <!-- Second column -->
 
-        <TableLayout
-            android:id="@+id/eintragsSpalte"
-            android:layout_width="260dp"
-            android:paddingLeft="2dp" >
-
+            <!-- Title -->
             <TableLayout
                 android:id="@+id/textSpalte"
-                android:layout_width="80dp"
-                android:paddingLeft="2dp" >
+                android:paddingLeft="2dp"
+                android:paddingRight="14dp" >
 
                 <TableRow>
 
                     <TextView
-                        android:layout_width="120dp"
-                        android:layout_height="fill_parent"
+                        android:layout_width="160dp"
+                    	android:layout_height="fill_parent"
                         android:ellipsize="end"
                         android:lines="1"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:text="Ein schöner Tag ohne Bild und ein viel viel viel zu langer Titel"
+                        android:text="Ein schöner Tag mit Bild und ein viel viel viel zu langer Titel"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -199,8 +216,9 @@
                 <TableRow>
 
                     <TextView
-                        android:layout_width="120dp"
-                        android:layout_height="fill_parent"
+                        android:layout_width="160dp"
+                   		android:layout_height="fill_parent"
+                   		android:layout_span="1"
                         android:ellipsize="end"
                         android:lines="3"
                         android:maxLines="3"
@@ -208,27 +226,137 @@
                         android:singleLine="false"
                         android:text="Lorem ipsum dolor sit at, consetetur sadipscing elitr, Lorem ipsum dolor sit amet, consetetur sadipscing elitr,Lorem ipsum dolor sit amet, consetetur sadipsci"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textSize="12sp"
-                        android:width="120dp" />
+                        android:textSize="12sp" />
                 </TableRow>
 
-                <TableLayout
-                    android:id="@+id/bildSpalte"
-                    android:layout_width="25dp" >
-
-                    <TableRow>
-
-                        <ImageView
-                            android:id="@+id/imageView1"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:src="@drawable/beach" />
-                    </TableRow>
-                </TableLayout>
-
             </TableLayout> <!-- Title & Text preview end -->
-	        </TableLayout>
 
-	     </TableRow>
+        <TableLayout
+            android:id="@+id/bildSpalte"
+            android:layout_width="80dp"
+            android:layout_height="fill_parent"
+             >
 
+            <TableRow>
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="80dp"
+                    android:layout_height="56dp"
+                    android:layout_span="1"
+                    android:src="@drawable/beach"
+                    android:scaleType="fitCenter"/>
+            </TableRow>
+            
+        </TableLayout>
+
+       </TableRow>
+
+       <!-- Amazing fake table border - FUCK android -->
+
+    <TableRow
+        android:id="@+id/diaryEntryDivider"
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:background="#dcdcdc" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:text="" />
+    </TableRow>
+    
+    <TableRow
+        android:id="@+id/diaryEntryWithoutPicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TableLayout android:layout_width="35dp" >
+
+            <!-- Wochentag -->
+            <TableRow>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="MO"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#505050"
+                    android:textSize="12sp"
+                     />
+            </TableRow>
+
+            <!-- Datum -->
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="18"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <!-- Uhrzeit -->
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="17:30"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#505050"
+                    android:textSize="12sp" />
+            </TableRow>
+        </TableLayout>
+
+        <!-- Diary entry preview -->
+
+        <TableLayout
+            android:layout_width="260dp"
+            android:paddingLeft="2dp"
+            android:layout_span="2" >
+
+            <!-- Titel -->
+
+            <TableRow>
+
+                <TextView
+                    android:layout_width="260dp"
+                    android:layout_height="fill_parent"
+                    android:text="Ein schöner Tag ohne Bild und ein viel viel viel zu langer Titel"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:singleLine="true" 
+                    />
+            </TableRow>
+
+            <!-- Text preview -->
+            <TableRow>
+
+                <TextView
+                    android:layout_width="260dp"
+                    android:layout_height="fill_parent"
+                    android:ellipsize="end"
+                    android:lines="3"
+                    android:maxLines="3"
+                    android:minHeight="40dp"
+                    android:singleLine="false"
+                    android:text="Lorem ipsum dolor sit at, consetetur sadipscing elitr, Lorem ipsum dolor sit amet, consetetur sadipscing elitr,Lorem ipsum dolor sit amet, consetetur sadipsci"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textSize="12sp"
+                    />
+            </TableRow>
+        </TableLayout>
+    </TableRow>
 </TableLayout>
