--- a/app/res/layout/activity_startseite.xml
+++ b/app/res/layout/activity_startseite.xml
@@ -35,6 +35,7 @@
         android:layout_below="@+id/btnAnlaufstellen"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
+        android:onClick="callNotfallkoffer"
         android:text="@string/btn_notfallkoffer" />
 
     <Button
