--- a/web/application/layouts/scripts/loginpage.phtml
+++ b/web/application/layouts/scripts/loginpage.phtml
@@ -7,7 +7,7 @@
         <?php echo $this->headLink()->appendStylesheet('/css/bootstrap.min.css') ?>
         <?php echo $this->headLink()->appendStylesheet('/css/login.css') ?>
 
- 
+
 
     </head>
     <body>
@@ -15,7 +15,12 @@
             <div class="row">
                 <?php echo $this->layout()->content ?>
             </div>
+            <div>
+                Es gibt momentan 2 Benutzerrollen: admin und therapist<br>
+                    Accounts: admin/admin, therapist1/therapist, therapist2/therapist
+            </div>
         </div>
+
 
     </body>
 </html>
