--- a/web/application/views/scripts/distraction/index.phtml
+++ b/web/application/views/scripts/distraction/index.phtml
@@ -9,6 +9,7 @@
             <tr>
                 <th>ID</th>
                 <th>Text</th>
+                <th>Emotion</th>
                 <th>Bearbeiten</th>
                 <th>Löschen</th>
             </tr>
