Modified NewEntryActivity: - Date field with current date - Modified text field length to fill_parent - Save button

--- a/app/res/layout/activity_new_entry.xml
+++ b/app/res/layout/activity_new_entry.xml
@@ -24,25 +24,47 @@
         android:layout_marginTop="5dp"
         android:text="@string/textMood"
         android:textAppearance="?android:attr/textAppearanceSmall" />
-    
-        <EditText
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+
+    <EditText
+        android:id="@+id/entry"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinnerMood"
-        android:layout_marginBottom="5dp"
+        android:layout_above="@+id/saveEntryBtn"
+        android:layout_alignLeft="@+id/title"
+        android:layout_marginBottom="16dp"
+        android:ems="10"
+        android:hint="@string/entry_hint"
+        android:inputType="textMultiLine" >
+
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/entry"
+        android:layout_alignLeft="@+id/textMood"
         android:ems="10"
         android:hint="@string/title_hint"
         android:inputType="text" />
 
+    <Button
+        android:id="@+id/saveEntryBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/entry"
+        android:layout_centerVertical="true"
+        android:text="@string/btn_saveDiaryEntry" />
+
     <EditText
-        android:id="@+id/entry"
+        android:id="@+id/entryDateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/title"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/spinnerMood"
         android:ems="10"
-        android:hint="@string/entry_hint"
-        android:inputType="textMultiLine" />
+        android:inputType="date"
+         />
 
 </RelativeLayout>
