--- a/app/res/layout/activity_contactpoint_list.xml
+++ b/app/res/layout/activity_contactpoint_list.xml
@@ -24,7 +24,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/Aufforderung1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_adress" />
@@ -98,7 +98,7 @@
             </TableLayout>
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/best_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_show_on_map"
